fix(Table): table cell overflow when cell type is STATUS_HINT

--- a/css/src/components/grid.css
+++ b/css/src/components/grid.css
@@ -354,6 +354,12 @@
   overflow: hidden;
 }
 
+.GridCell--statusHint {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
 .GridCell--avatar .Avatar {
   margin: 0;
 }
